--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "setup": "mkdir tmp",
+    "setup": "mkdir ~/.config/secret-man",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
