--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "inquirer": "^10.2.2",
+    "inquirer-search-list": "^1.2.6",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   }
